<http://webkit.org/b/65006> Draw rectangular box shadow for elements with border-radius if no corners are visible

Patch by Ian Henderson <ianh@apple.com> on 2011-08-03
Reviewed by Simon Fraser.

Source/WebCore:

Change "unroundClippedCorners" to "allCornersClippedOut" and use it to
determine when the corners' influence affects the blurred shadow in
the current drawing region.

Test: fast/box-shadow/box-shadow-clipped-slices.html

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::paintBoxShadow): Pass PaintInfo through to
RenderBoxModelObject::paintBoxShadow.
(WebCore::InlineFlowBox::paintBoxDecorations): Ditto.
* rendering/InlineFlowBox.h:
* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintBoxDecorations): Ditto.
* rendering/RenderBoxModelObject.cpp:
(WebCore::allCornersClippedOut): Determines whether the bounding rects
for any of the given rounded rect's corners intersects the clip rect.
(WebCore::RenderBoxModelObject::paintBorder): Instead of "unrounding"
any corner outside the clip rect, unround all corners at once, and
only if they are all outside the clip rect.
(WebCore::RenderBoxModelObject::paintBoxShadow): Determine whether any
corner will influence shadow drawing using allCornersClippedOut on the
influenceRect, whose corners extend past the fillRect's corners by the
blur radius and inside the fillRect's corners by the blur radius.
* rendering/RenderBoxModelObject.h:
* rendering/RenderFieldset.cpp:
(WebCore::RenderFieldset::paintBoxDecorations): Pass PaintInfo into
RenderBoxModelObject::paintBoxShadow.
* rendering/RenderTable.cpp:
(WebCore::RenderTable::paintBoxDecorations): Ditto.
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paintBoxDecorations): Ditto.

LayoutTests:

* fast/box-shadow/box-shadow-clipped-slices.html: Added.
* platform/mac/fast/box-shadow/box-shadow-clipped-slices-expected.png: Added.
* platform/mac/fast/box-shadow/box-shadow-clipped-slices-expected.txt: Added.

Canonical link: https://commits.webkit.org/81467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92340 268f45cc-cd09-0410-ab3c-d52691b4dbfc